app/assets/stylesheets/components/_index.scss
// Import your components CSS files here.
@import "alert";
@import "banner";
@import "card";
@import "mixins";

/* LOGO */
.logo {
  color: white;
  position: absolute;
  left: 0;
  top: 0;
  font-family: 'Playfair Display', serif;
  font-size: 28px;
  line-height: -45px;
  padding: 13px;
}

.logomatch {
  color: #F9C0C3;
  margin-top: -19px;
}

/*CREATE MODAL */
#createmodal {
    top: 13vh;
    right: -38vh;
    outline: none;
}

.createmodal-dialog {
  background-color: white;
  width: 75%;
  height: 40%;

  @include for-tablet-landscape-up {
    background-color: white;
    width: 39%;
    height: 40%;
  }

  @include for-tablet-landscape-up  {
    width: 600px;
    margin: 30px auto;
  }
}

.createmodal-footer {
  padding: 15px;
}

.createmodal-content {
  width:33vw;
}

.createmodal-title {
  text-transform: uppercase;
  letter-spacing: 1px;
  font-size: 11.5px;
  opacity: 0.7;
  padding:23px;
}

/* CREATE MODAL TRIGGER */
.createModalButton:hover {
  color: white;
  text-decoration: none;
  font-size:13px;
  border: 1px solid;
}

.createModalButton {
  text-align: center;
  margin-top: 15%;
  font-family: 'Open Sans', sans-serif;
  color: white;
  text-decoration: none;
  font-size: 13px;
  border: 1px solid;
  width: 235px;
  font-weight: lighter;
  background: none;
  outline:none;
}

.createModalButton p {
  margin: 2vh;
}

/* VIDEO */
.video {
  @include for-phone-only {
    display: none;
  }

  object-fit: cover !important;
  min-width: 100vw;
  max-width: 100vw;
  opacity: 0.4;
  min-height: 100vh;
  max-height: 100vh;
  position: absolute;
  bottom: 0;
  right: 0;
  z-index: -2000000;
  background: linear-gradient(beige, pink, white);
}

.videoContainer {
  @include for-phone-only {
    min-height: 100vh;
    max-height: 100vh;
    min-width: 100vw;
    max-width: 100vw;
    position: absolute;
    bottom: 0;
    right: 0;
    z-index: -2000000;
}

  background-color: #F9C0C3;
  min-height: 100vh;
  max-height: 100vh;
  min-width: 100vw;
  max-width: 100vw;
  position: absolute;
  bottom: 0;
  right: 0;
  z-index: -2000000;
}

/* LANDING PAGE INFO */
.landingPageInfo h1 span {
  text-shadow: 0.2vw 0.3vw #F9C0C3;
  font-size:55px;

  @include for-phone-only {
    text-shadow: 0.2vw 0.3vw beige;
    font-size:53px;
  }
}

.landingPageInfo {
    display: flex;
    flex-direction: column;
    z-index: 20;
    height: 100vh;
    justify-content: center;
    align-items: center;
    margin-left: 47%;

  @include for-phone-only {
    background: linear-gradient(beige, pink, white);
    display: flex;
    flex-direction: column;
    align-items: center;
    z-index: 20;
    height: 100vh;
    justify-content: center;
    margin-left:0;
  }
}

.landingPageInfo h1 {
  font-family: 'Playfair Display', serif;
  color: white;
  text-align: center;
  font-size: 42px;
}

.exploreArrow {
  letter-spacing: 1px;
  font-size: 12px;
  font-family: 'Open Sans', sans-serif;
  color: white;
  padding: 31px;
}

.description {
  font-family: 'Open Sans', sans-serif;
  font-weight: lighter;
  letter-spacing: 1px;
  font-size: 18px;
  background-color: white;
  padding: 26px;
  text-align:center;

  @include for-tablet-landscape-up {
    font-family: 'Open Sans', sans-serif;
    font-weight: lighter;
    letter-spacing: 1.5px;
    font-size: 17px;
    background-color: white;
    padding: 54px;
    text-align: center;
  }
}

.btn {
  border: 1px solid #F9C0C3;
}

.btn:hover {
  background-color:#F9C0C3;
}

.newcocktailform {
  margin-left:3vh;
}

.form-group {
  margin-bottom: 7vh;
}

.form-control {
  width:85%;
}

/* FOOTER */
.footer {
  display: flex;
  justify-content: center;
  background-color: white;
  font-family: 'Open Sans', sans-serif;
  font-size: 11px;
  align-content: center;
  height: 11vh;
  padding-top: 7vh;
}

.footer p {
  opacity:0.7;
}

a.githublink {
  opacity:0.7;
  text-decoration: none;
  color:black;
  margin-right:3vh;
}

a.githublink:hover {
  text-decoration: none;
  color:black;
  opacity:1;
}

